// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Страничка регистрации Верные данные 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert disabled"
            id=""
          >
            <span />
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Логин больше 15 символов 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_login_length"
          >
            <span>
              Логин должен содержать от 6 до 15 символов
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Логин занят 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert error"
            id="test_error_reg_loginOccupied"
          >
            <span>
              Логин занят
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Логин меньше 6 символов 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_login_length"
          >
            <span>
              Логин должен содержать от 6 до 15 символов
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Неверные символы других языков логин 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_acceptableSymbolsLogin"
          >
            <span>
              Логин может содержать символы кириллицы, латиницы и цифры
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Неверные символы логин 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_acceptableSymbolsLogin"
          >
            <span>
              Логин может содержать символы кириллицы, латиницы и цифры
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Никнейм длиннее 16 символов 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_nickname_length"
          >
            <span>
              Никнейм должен содержать от 3 до 16 символов
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Никнейм короче 3 символов 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_nickname_length"
          >
            <span>
              Никнейм должен содержать от 3 до 16 символов
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Никнейм содержит неверные символы 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_acceptableSymbolsNickname"
          >
            <span>
              Никнейм может содержать символы любого языка и цифры
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Пароль больше 20 символов 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_password_length"
          >
            <span>
              В пароле должно быть от 8 до 20 символов
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Страничка регистрации Пароль меньше 8 символов 1`] = `
<DocumentFragment>
  <div
    class="authPage"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="counter-nastup"
          src="Logo.png"
        />
      </a>
    </div>
    <div
      class="wrapper"
    >
      <div
        class="content"
      >
        <div
          class="title"
          id="test_auth_reg_title"
        >
          <a
            href="/authorization"
            tabindex="-1"
          >
            <button
              class="button auth_switch_page primary"
              id="test_login_go_log_button"
            >
              Уже служил
            </button>
          </a>
        </div>
        <form
          class="form"
        >
          <div
            class="values"
          >
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_log_input"
                placeholder="Логин"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input"
                id="test_reg_nick_input"
                placeholder="Никнейм"
                type="text"
              />
            </div>
            <div
              class="wrapper"
            >
              <input
                autocomplete="off"
                class="input password"
                id="test_reg_pass_input"
                placeholder="Пароль"
                type="password"
              />
              <div
                class="eye"
              >
                <svg
                  data-testid="close-eye-icon"
                >
                  closeEye.svg
                </svg>
              </div>
            </div>
          </div>
          <div
            class="alert warning"
            id="test_warning_reg_password_length"
          >
            <span>
              В пароле должно быть от 8 до 20 символов
            </span>
          </div>
          <button
            class="button submit primary"
            id="test_reg_submit_button"
          >
            Подписать повестку
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
